<resources>
    <string name="About">About / Contact</string>
    <string name="about_translationGerman">German translation: Mario Kornmesser, Matthias Krümberg</string>
    <string name="action_clear_map">Clear map</string>
    <string name="action_directions">Directions</string>
    <string name="action_load">Load trip</string>
    <string name="action_save">Save trip</string>
    <string name="action_settings">Settings</string>
    <string name="action_zoom_to_route">Zoom to route</string>
    <string name="Add_a_brewery">Add a brewery</string>
    <string name="Add_a_note">Add a note</string>
    <string name="Add_to_route">Add to route</string>
    <string name="Analyzing_route">Analyzing route</string>
    <string name="Appearance">Appearance</string>
    <string name="Application_error">Application error: %d</string>
    <string name="app_name">Beer Me!™ mobile</string>
    <string name="App_not_licensed">This application is not licensed.</string>
    <string name="Aroma">Aroma</string>
    <string name="Bar">Bar / Tasting Room</string>
    <string name="Beer_details">Beer details</string>
    <string name="Beer_garden">Beer Garden / Outdoor Seating</string>
    <string name="beer_image">beer image</string>
    <string name="Beer_list">Beer List</string>
    <string name="Beerme_notes">Beer Me! notes</string>
    <string name="beernote_appearance_hint">Notes on the beer\'s appearance</string>
    <string name="beernote_aroma_hint">Notes on the beer\'s aroma</string>
    <string name="Beer_note">Beer note</string>
    <string name="beernote_date_hint">When did you taste this beer?</string>
    <string name="beernote_mouthfeel_hint">Notes on the beer\'s mouthfeel and flavor</string>
    <string name="beernote_overall_hint">Overall impression</string>
    <string name="beernote_package_hint">Can, bottle, draught?</string>
    <string name="beernote_place_hint">Where did you find it?</string>
    <string name="bottled">bottled</string>
    <string name="Brewery_details">Brewery details</string>
    <string name="brewery_image">brewery image</string>
    <string name="Brewery_note">Brewery note</string>
    <string name="brewerynote_date_hint">When did you visit\nthis brewery?</string>
    <string name="Brewery_notes">Brewery notes</string>
    <string name="Brewery_status_filter">Brewery status filter</string>
    <string name="Brewery_status_filter_summary">Filter breweries by status</string>
    <string name="Buy_app">Buy app</string>
    <string name="Calculating_directions">Calculating directions</string>
    <string name="Call">Call</string>
    <string name="Cancel">Cancel</string>
    <string name="canned">canned</string>
    <string name="Cant_create_map">Unable to create map</string>
    <string name="cask_conditioned">cask-conditioned</string>
    <string name="Checking_license">Checking license</string>
    <string name="Choose_a_file">Choose a file</string>
    <string name="choose_pkg">Choose a package</string>
    <string name="choose_status">Choose a status</string>
    <string name="Close">Close</string>
    <string name="Closed">Closed</string>
    <string name="contact">Contact</string>
    <string name="copyright">©1992–2025 Richard Stueven</string>
    <string name="current_location">Current location</string>
    <string name="Database">Database</string>
    <string name="Database_downgrade_unsupported">Database downgrade from %1$d to %2$d is not supported.</string>
    <string name="Database_is_busy">Database is temporarily busy.</string>
    <string name="Database_problem">Database problem</string>
    <string name="Database_update">Database update</string>
    <string name="Database_updates_take_minutes">Database updates can run for several minutes, depending on how much new data there is.</string>
    <string name="Database_upgrade_failed">Database upgrade failed</string>
    <string name="Database_upgrade_unsupported">Database upgrade from %1$d to %2$d is not supported.</string>
    <string name="Data_problem">Data problem</string>
    <string name="Date">Date</string>
    <string name="default_distance">10</string>
    <string name="defaultLocation">Default Location</string>
    <string name="defaultLocationSummary">Set your default location</string>
    <string name="defaultLocationTitle">Enter an address, city, latitude/longitude, etc.</string>
    <string name="Deleted">Deleted</string>
    <string name="Delete">Delete</string>
    <string name="Delete_file">Delete file</string>
    <string name="Delete_marker">Delete marker</string>
    <string name="Delete_note">Delete note</string>
    <string name="Directions">Directions</string>
    <string name="direction_hint">direction hint</string>
    <string name="Distance_unit">Distance unit</string>
    <string name="dist_label">Dist:</string>
    <string name="Display_nearby_breweries_as">Display nearby breweries as</string>
    <string name="Do_not_show_message_again">Do not show this message again</string>
    <string name="Download_in_progress">Download in progress</string>
    <string name="draught">draught</string>
    <string name="east">E</string>
    <string name="Edit">Edit</string>
    <string name="Edit_note">Edit note</string>
    <string name="emailSubject">Beer Me!™ for Android</string>
    <string name="end_label">End:</string>
    <string name="Enter_destination">Enter a destination</string>
    <string name="Enter_distance">Enter a distance</string>
    <string name="Enter_ending_location">Enter ending location</string>
    <string name="Exit">Exit</string>
    <string name="Export_database">Export database to file</string>
    <string name="Export">Export</string>
    <string name="Failed_to_update_TABLE_data">Failed to update %s data</string>
    <string name="file_exists">File exists!</string>
    <string name="File_exists">The file \'%s\' already exists.</string>
    <string name="fixError1">Submitting this form will send the information to Beer Me!™. It may take several days for the information to appear in the database.</string>
    <string name="fixError2">Please do not use this form to try to contact a brewery.</string>
    <string name="fixError3">Thanks for your help!</string>
    <string name="fixErrorAddress">Address</string>
    <string name="fixErrorAddressHint">Including city, state, postal code, country</string>
    <string name="fixErrorComments">Comments</string>
    <string name="fixErrorCommentsHint">Add information about the beers, or any other comments you may have.</string>
    <string name="fixErrorHoursHint">When is this location open to the public?</string>
    <string name="fixErrorHours">Hours of Operation</string>
    <string name="fixErrorNameHint">Name of the brewery</string>
    <string name="fixErrorName">Name</string>
    <string name="fixErrorOpenPublic">Open to the Public?</string>
    <string name="fixErrorPhoneHint">Brewery\'s telephone number</string>
    <string name="fixErrorPhone">Telephone</string>
    <string name="fixErrorStatusHint">Select a status</string>
    <string name="fixErrorStatus">Status</string>
    <string name="fixErrorTitle">Update Brewery Information</string>
    <string name="fixErrorWebHint">http://</string>
    <string name="fixErrorWeb">Web Site</string>
    <string name="Food">Food</string>
    <string name="Force_data_reload">Force data reload</string>
    <string name="Force_data_reload_summary">Reload the entire database</string>
    <string name="Force_data_update">Force data update</string>
    <string name="Force_data_update_summary">Download the latest data</string>
    <string name="Gift_shop">Retail Items (Shirts, hats, glassware, etc.)</string>
    <string name="Go">Go</string>
    <string name="Google_stops_limit">Google Maps limits you to only 8 stops</string>
    <string name="hand_pumped">hand-pumped</string>
    <string name="helpBeerAddNote">Write your own review of this beer.</string>
    <string name="helpBeerMain">Touch the brewery\'s name to see more information about the brewery. Touch \'My Notes\' to write and view your notes on this beer. Press and hold a note to edit or delete it.</string>
    <string name="helpBeerNoteCancel">Discard your note.</string>
    <string name="helpBeerNoteMain">Tap on the various fields to complete the form. Be sure to add ratings by tapping on the numbers in the column on the right.</string>
    <string name="helpBeerNoteSave">Save your note.</string>
    <string name="helpBeerNotesMain">Tap on Beer Me! notes to see the tasting notes. Tap on My notes to see your tasting notes. Tap on the brewery\'s name to find it on a map.</string>
    <string name="helpBeerNotesTitle">Help: Beer notes</string>
    <string name="helpBeerNoteTitle">Help: Beer note</string>
    <string name="helpBeerTitle">Help: Beer</string>
    <string name="helpBreweryAddCancel">Discard your note.</string>
    <string name="helpBreweryAddNote">Add your own notes about this brewery.</string>
    <string name="helpBreweryBeerList">Tap on a beer in the list for more information.</string>
    <string name="helpBreweryCall">Call the brewery.</string>
    <string name="helpBreweryHours">If the brewery is open to the public, the hours will be displayed here.</string>
    <string name="helpBreweryMap">Show the brewery on a map.</string>
    <string name="helpBreweryNoteMain">Tap on the Date, Rating, and Notes fields to complete the form.</string>
    <string name="helpBreweryNoteSave">Save your note.</string>
    <string name="helpBreweryNotes">View your notes on this brewery. Press and hold a note to edit or delete it.</string>
    <string name="helpBreweryNoteTitle">Help: Brewery note</string>
    <string name="helpBreweryTitle">Help: Brewery</string>
    <string name="helpBreweryUpdate">Send updated brewery information to beerme.com</string>
    <string name="helpBreweryWeb">View the brewery\'s website.</string>
    <string name="Help">Help</string>
    <string name="helpMainAbout">Information about the app.</string>
    <string name="helpMainDatabase">Refresh, save, or reload your database.</string>
    <string name="helpMainHelp">Access help for the current task.</string>
    <string name="helpMainNearby">A map (or list) showing breweries within 100km of your location. Tap on a brewery for more information.</string>
    <string name="helpMainNews">A list of recent brewery news articles.</string>
    <string name="helpMainSearch">Search for breweries, beers, and locales.</string>
    <string name="helpMainSettings">Change the app\'s settings.</string>
    <string name="helpMainTitle">Help: Main</string>
    <string name="helpMainTripPlanner">Specify a route, and get directions to the breweries along the way.</string>
    <string name="helpMainUpdate">Notify beerme.com of new breweries.</string>
    <string name="helpMainUpdates">A list of breweries that have recently had their information updated.</string>
    <string name="Hotel">Hotel Rooms</string>
    <string name="Hours">Hours</string>
    <string name="Hours_Services">Hours / Services</string>
    <string name="Image">Image</string>
    <string name="Import_database">Import database from file</string>
    <string name="Import">Import</string>
    <string name="Internet">Internet Access</string>
    <string name="kilometers">km</string>
    <string name="List">List</string>
    <string name="Loading">Loading</string>
    <string name="Loading_N_breweries">Loading %d breweries</string>
    <string name="Loading_TABLE_data">Loading %s data</string>
    <string name="locationDialogTitle">Select a location</string>
    <string name="Map">Map</string>
    <string name="MenuOptions">Menu Options</string>
    <string name="Notes">Notes</string>
    <string name="Rating">Rating</string>
    <string name="Search">Search</string>
    <string name="Settings">Settings</string>
    <string name="Tabs">Tabs</string>
    <string name="Update">Update</string>
    <string name="Web">Web</string>
    <string name="zero">0</string>
</resources>