<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_directions"
        android:icon="@android:drawable/ic_menu_directions"
        app:showAsAction="ifRoom"
        android:title="@string/action_directions"/>
    <item
        android:id="@+id/action_clear_map"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="ifRoom"
        android:title="@string/action_clear_map"/>
    <item
        android:id="@+id/action_zoom_to_route"
        android:icon="@android:drawable/ic_menu_zoom"
        app:showAsAction="ifRoom"
        android:title="@string/action_zoom_to_route"/>
    <item
        android:id="@+id/action_save"
        android:icon="@android:drawable/ic_menu_save"
        app:showAsAction="never"
        android:title="@string/action_save"/>
    <item
        android:id="@+id/action_load"
        android:icon="@android:drawable/ic_menu_myplaces"
        app:showAsAction="never"
        android:title="@string/action_load"/>

</menu>